# scalable-django-channels

./: .gitignore  .parameters.template.json  .secrets.template.json  README.md  app.py  requirements-dev.txt
scalable_django_channels/: database_stack.py  deployment_stage.py  message_broker_stack.py  my_django_chat_app_stack.py  network_stack.py  pipeline_stack.py  scalable_django_channels_stack.py
src/: manage.py  pyproject.toml
src/chat/: views.py
src/chat/templates/chat/: room.html
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: base.py  prod.py  stage.py
src/docker/: .env.template  docker-compose.yml
src/docker/chat/: Dockerfile  start-dev-server.sh  start-prod-server.sh
src/my_django_chat/: asgi.py  settings.py  urls.py  wsgi.py
src/my_django_chat/settings/: base.py  stage.py
src/users/migrations/: 0001_initial.py
tests/unit/: test_scalable_django_channels_stack.py
